CMF 1.5.1beta (unreleased)

  New Features

    - CachePolicyManager: You can now set a ETag using a TALES expression
      (http://www.zope.org/Collectors/CMF/236) 

    - RegistrationTool: The regular expression that limits what people
      can put in as a valid member ID is now configurable TTW in the
      portal_registration tool (http://collector.zope.org/CMF/117)

  Bug Fixes

    - FSFile, FSImage: Made available to caching policy manager as
      standard content. (http://zope.org/Collectors/CMF/299)

    - FSDTMLMethod: Small code cleanup to remove duplicate variable
      definition (http://collector.zope.org/CMF/291)

    - Portal: Fixed 'setupDefaultProperties'.
      Backwards compatibility was broken and the 'default_charset' argument
      was ignored.

    - Document/NewsItem: If the "plain text" format is selected the
      content will no longer be tested for HTML and reduced to text
      between opening and closing "body" tags
      (http://collector.zope.org/CMF/214)

    - Document/NewsItem: A call to setFormat will now re-cook the
      document content if the format has been changed (arising from
      discussion about http://collector.zope.org/CMF/214)

    - DirectoryViews/FSMetadata: Corrected some erroneous docstrings
      about proxy role handling using .metadata files
      (http://collector.zope.org/CMF/177)

CMF 1.5.0 (2004/10/21)

  New Features

    - Portal: Added 'default_charset' property.
      (http://collector.zope.org/CMF/261)

    - CMFDefault utils: Added 'toUnicode' function.
      (http://collector.zope.org/CMF/261)

  Bug Fixes

    - ZPT skin: Fixed 'RSS'.
      Values are now converted to unicode, using 'default_charset'.
      (http://collector.zope.org/CMF/261)

    - DublinCore: Added 'setCreators' method.  Note that
      'notifyModified' also modifies creators. If the current user
      should not be added to creators, make sure notifyModified() is not